fix: vertically align hero text and image

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -49,6 +49,11 @@
   width: 100% !important;
 }
 
+.VPHero .main {
+  display: flex !important;
+  align-items: center !important;
+}
+
 
 /* Premium nav */
 .VPNav {
